<resources>
    <string name="app_name">MyEcommerce</string>
    <string name="available_btn">Its available</string>
    <string name="settings">Settings</string>
    <string name="underwear">Underwears</string>
    <string name="trousers">Trousers</string>
    <string name="shirts">Shirts</string>
    <string name="home">Home</string>
    <string name="admin">Admin</string>
    <string name="admin_panel">Admin Panel</string>
</resources>